opentelemetry/inject-otel-environment-variable/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inject-default
  namespace: otel-inject-default
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: inject-pod-optout
  namespace: otel-inject-default
  annotations:
    otel.corp.org/inject-env-var: "false"
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: inject-ns-optout
  namespace: otel-inject-disabled
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: inject-ns-endpoint
  namespace: otel-custom-endpoint
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: inject-pod-endpoint
  namespace: otel-inject-default
  annotations:
    otel.corp.org/otlp-endpoint: http://http-collector:4318
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: inject-init-and-preexisting-env
  namespace: otel-inject-default
spec:
  initContainers:
  - name: init
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: TEST_ENV
      value: test
