opentelemetry/inject-otel-environment-variable/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: inject-otel-environment-variable
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../inject-otel-environment-variable.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod-resources.yaml
    - assert:
        file: pod-patched.yaml
    - error:
        file: pod-not-patched.yaml
